--- a/src/main/resources/templates/signup-form.html
+++ b/src/main/resources/templates/signup-form.html
@@ -21,7 +21,8 @@
             <p>Pseudo <input type="text" name="pseudo"/></p>
             <p>Password <input type="password" name="password"/></p>
             <div class="form-group">
-                <label class="form-check-label"><input type="checkbox" required="required"> <a href="#">I accept the Terms
+                <label class="form-check-label"><input type="checkbox" required="required"> <a href="#">I accept the
+                    Terms
                     of Use</a> &amp; <a href="#">Privacy Policy</a></label>
             </div>
             <p><input type="submit" value="Submit"/></p>
