--- a/src/main/resources/templates/spot/spotList.html
+++ b/src/main/resources/templates/spot/spotList.html
@@ -64,7 +64,7 @@
     </form>
 
     <div th:if="${#lists.size(spotList) == 0}">
-        <p>Aucun résultat</p>
+        <p>No result</p>
     </div>
 
     <table th:if="${#lists.size(spotList) != 0}"
