Correction bug th:each dans spot et area de userAccount.html

--- a/src/main/resources/templates/userAccount.html
+++ b/src/main/resources/templates/userAccount.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="tab-pane fade" id="mySpots">
                         <h3>My Spots</h3>
-                        <table border="1" cellpadding="10" th:each="spot: ${spots}">
+                        <table border="1" cellpadding="10" >
                             <tr>
                                 <th>Name</th>
                                 <th>Description</th>
@@ -172,7 +172,7 @@
 
                     <div class="tab-pane fade" id="myAreas">
                         <h3>My Areas</h3>
-                        <table border="1" cellpadding="10" th:each="area: ${areas}">
+                        <table border="1" cellpadding="10" >
                             <tr>
                                 <th>Name</th>
                                 <th>Description</th>
